--- a/consultation.html
+++ b/consultation.html
@@ -24,7 +24,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="navigation-item">Вебинары</a>
+                        <a href="index.html" class="navigation-item">Вебинары</a>
                     </li>
 
                     <li>
@@ -98,6 +98,84 @@
 
     <div class="background-block__header"></div>
 </header>
+
+<div class="header-mobile">
+    <div class="mobile-navigation">
+        <div class="mobile-navigation__logo">
+            <img src="assets/img/logo/mobile-logo.png" alt="Aga Method">
+        </div>
+
+        <div class="mobile-navigation__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+</div>
+
+<div class="mobile-menu not-visible">
+    <div class="menu-body"></div>
+    <div class="menu-content">
+        <div class="mobile-menu__header">
+            <div class="mobile-menu__header__logo">
+                <img src="assets/img/logo/mobile-logo.png" alt="">
+            </div>
+        </div>
+
+        <div class="mobile-menu__main">
+            <ul class="mobile-menu__nav">
+
+                <li>
+                    <a href="course.html" class="mobile-menu-nav__item">
+                        курС МИР ТАРО
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="mobile-menu-nav__item">
+                        Вебинары
+                    </a>
+                </li>
+
+                <li>
+                    <a href="consultation.html" class="mobile-menu-nav__item">
+                        Консультация
+                    </a>
+                </li>
+
+                <li>
+                    <a href="contacts.html" class="mobile-menu-nav__item">
+                        Контакты
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="mobile-menu__social-icons">
+                <li>
+                    <a href="#">
+                        <img src="assets/img/social_icons/ins-black.svg" alt="instagram">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <img src="assets/img/social_icons/yot-black.svg" alt="instagram">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <img src="assets/img/social_icons/tg-black.svg" alt="instagram">
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="menu-content__dec-logo">
+            <img src="assets/img/logo/mobile-menu_logo.png" alt="Aga Method">
+        </div>
+    </div>
+</div>
 
 <main class="main">
     <section class="person-consultation">
@@ -584,7 +662,7 @@
                     <p>IBAN 0000 0000 0000 000 UA</p>
                 </div>
 
-                <div class="terms">
+                <div class="terms mobile-none">
                     <a href="#" class="terms-link">Публичная оферта</a>
                     <a href="#" class="terms-link">Политика конфиденциальности</a>
                 </div>
@@ -597,49 +675,63 @@
             </div>
 
             <div class="col col--right">
-                <ul class="footer__nav-list">
-                    <li>
-                        <a href="#" class="footer__nav-list__item">
-                            Вебинары
-                        </a>
-                    </li>
 
-                    <li>
-                        <a href="#" class="footer__nav-list__item">
-                            консультация
-                        </a>
-                    </li>
+                <div class="mobile-row">
+                    <ul class="footer__nav-list">
+                        <li>
+                            <a href="index.html" class="footer__nav-list__item">
+                                Вебинары
+                            </a>
+                        </li>
 
-                    <li>
-                        <a href="#" class="footer__nav-list__item">
-                            контакты
-                        </a>
-                    </li>
-                </ul>
+                        <li>
+                            <a href="consultation.html" class="footer__nav-list__item">
+                                консультация
+                            </a>
+                        </li>
 
-                <ul class="footer__social-icons">
-                    <li>
-                        <a href="#">
-                            <img src="assets/img/social_icons/inst-footer.svg" alt="Инстаграм">
-                        </a>
-                    </li>
+                        <li>
+                            <a href="contacts.html" class="footer__nav-list__item">
+                                контакты
+                            </a>
+                        </li>
 
-                    <li>
-                        <a href="#">
-                            <img src="assets/img/social_icons/yout-footer.svg" alt="Ютуб">
-                        </a>
-                    </li>
+                        <li>
+                            <a href="tel:+380440000000" class="footer-phone title-medium mobile-active">
+                                + 380 (44) 000 00 00
+                            </a>
+                        </li>
+                    </ul>
 
-                    <li>
-                        <a href="#">
-                            <img src="assets/img/social_icons/tg-footer.svg" alt="Телеграм">
-                        </a>
-                    </li>
-                </ul>
 
-                <a href="tel:+380440000000" class="footer-phone title-medium">
+                    <ul class="footer__social-icons">
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/social_icons/inst-footer.svg" alt="Инстаграм">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/social_icons/yout-footer.svg" alt="Ютуб">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/social_icons/tg-footer.svg" alt="Телеграм">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <a href="tel:+380440000000" class="footer-phone title-medium mobile-none">
                     + 380 (44) 000 00 00
                 </a>
+
+                <div class="terms mobile-active">
+                    <a href="#" class="terms-link">Публичная оферта</a>
+                    <a href="#" class="terms-link">Политика конфиденциальности</a>
+                </div>
             </div>
         </div>
     </div>
