--- a/course.html
+++ b/course.html
@@ -6,6 +6,9 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Курс Мир Таро</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.css"
+        integrity="sha512-jxGmKjC/OykrTklkNK2NgnhNtKtUAADFY+rvSi3nA7dbaPRfjrSXYxHqX8iq5N6WTOntqEQZrEwW3L84sirfKQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/fonts/style.css">
 </head>
@@ -294,7 +297,7 @@
 
             <input class="pon" type="checkbox" id="privacy_policy" name="2" required>
 
-            <label for="privacy_policy">
+            <label class="form-pol" for="privacy_policy">
               Нажимая на кнопку, вы даете согласие на обработку своих персональных данных
             </label>
 
@@ -330,7 +333,29 @@
         </div>
       </div>
 
-      <div class="reviews__main-logo">
+      <div class="swiper__reviews-cards mobile-active">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide reviews-slide">
+            <div class="reviews-card">
+              <img src="assets/img/reviews/review-02.png" alt="Отзывы">
+            </div>
+          </div>
+
+          <div class="swiper-slide reviews-slide">
+            <div class="reviews-card">
+              <img src="assets/img/reviews/review-03.png" alt="Отзывы">
+            </div>
+          </div>
+
+          <div class="swiper-slide reviews-slide">
+            <div class="reviews-card">
+              <img src="assets/img/reviews/review-01.png" alt="Отзывы">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="reviews__main-logo mobile-none">
         <img src="assets/img/logo/main-logo.png" alt="Aga Method">
       </div>
     </div>
@@ -425,6 +450,9 @@
   </div>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js"
+        integrity="sha512-wdUM0BxMyMC/Yem1RWDiIiXA6ssXMoxypihVEwxDc+ftznGeRu4s9Fmxl8PthpxOh5CQ0eqjqw1Q8ScgNA1moQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
