--- a/consultation.html
+++ b/consultation.html
@@ -57,42 +57,56 @@
         <div class="container">
             <div class="header-content__consultation__row">
                 <div class="header-content__consultation__row__box_1">
-                    <h1 class="title-big">
+                    <h1 class="title-big header-content__consultation__title">
                         Получите личную <br> консультацию
                     </h1>
 
-                    <p class="header-content__consultation__subtitle">
+                    <p class="header-content__consultation__subtitle m-none">
                         Найдите свое поле энергии для бизнеса, <br> здоровья, отношений и самореализации
                     </p>
-
-                    <a href="#" class="header-content__consultation__btn">
-                        получить личную консультацию
-                    </a>
                 </div>
                 <div class="header-content__consultation__row__box_2">
-                    <div class="header-content__consultation__img">
-                        <img src="assets/img/header/persons/karina.png" alt="Карина">
-                    </div>
+                    <p class="header-content__consultation__about mobile-active">
+                        Найдите свое поле энергии для:
+                    </p>
 
-                    <div class="about-expert__consultation">
-                        <h2 class="expert-name title">
-                            Карина Агаян
-                        </h2>
+                    <ul class="header-content__consultation__about-list mobile-active">
+                        <li>бизнеса</li>
+                        <li>здоровья</li>
+                        <li>отношений</li>
+                        <li>самореализации</li>
+                    </ul>
 
-                        <p class="expert-position">
-                            энерготерапевт, таролог
-                        </p>
+                    <div class="header-content__consultation__row__expert">
+                        <div class="header-content__consultation__img">
+                            <img class="mobile-none" src="assets/img/header/persons/karina.png" alt="Карина">
+                            <img class="mobile-active" src="assets/img/header/persons/karina-mob.png" alt="Карина">
+                        </div>
+
+                        <div class="about-expert__consultation">
+                            <h2 class="expert-name title">
+                                Карина Агаян
+                            </h2>
+
+                            <p class="expert-position">
+                                энерготерапевт, таролог
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <a href="#" class="header-content__consultation__btn">
+                получить личную консультацию
+            </a>
         </div>
     </div>
 
-    <div class="header-consultation__leaf__decoration decoration">
+    <div class="header-consultation__leaf__decoration decoration mobile-none">
         <img src="assets/img/decoration/leaf.png" alt="Листок">
     </div>
 
-    <div class="header-consultation__cloudy__decoration decoration">
+    <div class="header-consultation__cloudy__decoration decoration mobile-none">
         <img src="assets/img/decoration/cloudy_2.png" alt="Облако">
     </div>
 
@@ -132,7 +146,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="mobile-menu-nav__item">
+                    <a href="index.htmlеч" class="mobile-menu-nav__item">
                         Вебинары
                     </a>
                 </li>
@@ -273,19 +287,19 @@
             </div>
         </div>
 
-        <div class="person-consultation__leaf__decoration_1 decoration">
+        <div class="person-consultation__leaf__decoration_1 decoration mobile-none">
             <img src="assets/img/decoration/leaf.png" alt="Листок">
         </div>
 
-        <div class="person-consultation__big-logo decoration">
+        <div class="person-consultation__big-logo decoration mobile-none">
             <img src="assets/img/logo/main-ligo_min-blur.png" alt="">
         </div>
 
-        <div class="person-consultation__box__cloudy__decoration_1 decoration">
+        <div class="person-consultation__box__cloudy__decoration_1 decoration mobile-none">
             <img src="assets/img/decoration/cloudy_2.png" alt="Облако">
         </div>
 
-        <div class="person-consultation__box__cloudy__decoration_2 decoration">
+        <div class="person-consultation__box__cloudy__decoration_2 decoration mobile-none">
             <img src="assets/img/decoration/cloudy_1.png" alt="Облако">
         </div>
     </section>
@@ -300,9 +314,24 @@
                 <div class="youtube-slider">
                     <div class="swiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/img/yout.png" alt=""></div>
-                            <div class="swiper-slide"><img src="assets/img/yout.png" alt=""></div>
-                            <div class="swiper-slide"><img src="assets/img/yout.png" alt=""></div>
+                            <div class="swiper-slide">
+                                <div class="youtube-slider-item">
+                                    <img src="assets/img/yout.png" alt="">
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <div class="youtube-slider-item">
+                                    <img src="assets/img/yout.png" alt="">
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <div class="youtube-slider-item">
+                                    <img src="assets/img/yout.png" alt="">
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -327,18 +356,18 @@
             </div>
         </div>
 
-        <div class="webinar-videos__leaf__decoration_1 decoration">
+        <div class="webinar-videos__leaf__decoration_1 decoration mobile-none">
             <img src="assets/img/decoration/leaf.png" alt="Листок">
         </div>
 
-        <div class="webinar-videos__leaf__decoration_2 decoration">
+        <div class="webinar-videos__leaf__decoration_2 decoration mobile-none">
             <img src="assets/img/decoration/leaf.png" alt="Листок">
         </div>
     </section>
 
     <section class="conditions-consultation">
         <div class="container">
-            <h1 class="title-medium center">
+            <h1 class="title-medium">
                 как проходит консультация
                 <br>
                 с энерготерапевтом
@@ -473,11 +502,11 @@
             </div>
         </div>
         
-        <div class="about-person__cloudy__decoration_1 decoration">
+        <div class="about-person__cloudy__decoration_1 decoration mobile-none">
             <img src="assets/img/decoration/cloudy_1.png" alt="Облако">
         </div>
 
-        <div class="about-person__cloudy__decoration_2 decoration">
+        <div class="about-person__cloudy__decoration_2 decoration mobile-none">
             <img src="assets/img/decoration/cloudy_2.png" alt="Облако">
         </div>
     </section>
