--- a/course.html
+++ b/course.html
@@ -24,11 +24,11 @@
 
         <ul class="navigation">
           <li>
-            <a href="index.html" class="navigation-item active">курС МИР ТАРО</a>
+            <a href="#" class="navigation-item active">курС МИР ТАРО</a>
           </li>
 
           <li>
-            <a href="#" class="navigation-item">Вебинары</a>
+            <a href="index.html" class="navigation-item">Вебинары</a>
           </li>
 
           <li>
@@ -145,7 +145,7 @@
         </li>
 
         <li>
-          <a href="#" class="mobile-menu-nav__item">
+          <a href="index.html" class="mobile-menu-nav__item">
             Вебинары
           </a>
         </li>
