--- a/contacts.html
+++ b/contacts.html
@@ -29,7 +29,7 @@
           </li>
 
           <li>
-            <a href="#" class="navigation-item">Консультация</a>
+            <a href="consultation.html" class="navigation-item">Консультация</a>
           </li>
 
           <li>
