--- a/contacts.html
+++ b/contacts.html
@@ -56,7 +56,7 @@
 
   <div class="header-content header-content__contacts">
     <div class="container">
-      <h1 class="title-big">
+      <h1 class="title-big header-content__contacts__title">
         контакты
       </h1>
 
@@ -64,6 +64,10 @@
         Энерготерапевта и таролога Карины Аганян
       </p>
     </div>
+  </div>
+
+  <div class="header-contacts__cloudy__decoration__mob_1 decoration mobile-active">
+    <img src="assets/img/decoration/mob-cloudy_01.png" alt="Облако">
   </div>
 </header>
 
@@ -100,7 +104,7 @@
         </li>
 
         <li>
-          <a href="#" class="mobile-menu-nav__item">
+          <a href="index.html" class="mobile-menu-nav__item">
             Вебинары
           </a>
         </li>
@@ -163,7 +167,7 @@
       </div>
     </div>
 
-    <div class="header-contacts__cloudy__decoration decoration">
+    <div class="header-contacts__cloudy__decoration decoration mobile-none">
       <img src="assets/img/decoration/cloudy_3.png" alt="Облако">
     </div>
   </section>
