--- a/course.html
+++ b/course.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<header class="header header-home">
+<header class="header header-home header-course">
   <nav class="nav">
     <div class="container nav-container">
       <div class="nav-row">
@@ -110,6 +110,20 @@
   <div class="header-taro__decoration_2 decoration  mobile-none">
     <img src="assets/img/decoration/taro_02.png" alt="Карты">
   </div>
+
+  <div class="header-taro__decoration-mob_1 decoration mobile-active">
+    <img src="assets/img/decoration/taro-mob_01.png" alt="Карты">
+  </div>
+
+  <div class="header-taro__decoration-mob_2 decoration mobile-active">
+    <img src="assets/img/decoration/taro-mob_02.png" alt="Карты">
+  </div>
+
+  <div class="header-taro__decoration-mob_3 decoration mobile-active">
+    <img src="assets/img/decoration/taro-mob_03.png" alt="Карты">
+  </div>
+
+
 </header>
 
 <div class="header-mobile">
