--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
                     <div class="woman-img">
                         <img src="assets/img/consultation/woman.png" alt="Женщина">
                     </div>
+
+                    <div class="consultation-block__cloudy__decoration-mob_1 decoration mobile-active">
+                        <img src="assets/img/decoration/mob-cloudy_01.png" alt="облако">
+                    </div>
+
+                    <div class="consultation-block__cloudy__decoration-mob_2 decoration mobile-active">
+                        <img src="assets/img/decoration/mob-cloudy_02.png" alt="облако">
+                    </div>
                 </div>
 
                 <div class="help-with__content">
