--- a/consultation.html
+++ b/consultation.html
@@ -110,6 +110,10 @@
         <img src="assets/img/decoration/cloudy_2.png" alt="Облако">
     </div>
 
+    <div class="header-consultation__cloudy__decoration__mob_1 decoration mobile-active">
+        <img src="assets/img/decoration/mob-cloudy_01.png" alt="Облако">
+    </div>
+
     <div class="background-block__header"></div>
 </header>
 
@@ -367,7 +371,7 @@
 
     <section class="conditions-consultation">
         <div class="container">
-            <h1 class="title-medium">
+            <h1 class="title-medium conditions-consultation__title">
                 как проходит консультация
                 <br>
                 с энерготерапевтом
